# showcase

./: README.md
cli/spotify-stories/cli/: Cargo.toml
cli/spotify-stories/cli/migrations/2023-01-20-190952_songs/: down.sql
cli/spotify-stories/cli/src/: lib.rs
cli/spotify-stories/cli/src/ops/: mod.rs  show_ops.rs  song_ops.rs
cli/spotify-stories/cli/src/sql/: schema.rs
email-sender/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
email-sender/app/: Cargo.toml
email-sender/app/src/: mailer.rs  main.rs
email-sender/common/: Cargo.toml
email-sender/common/src/: lib.rs
email-sender/common/src/data/: mod.rs
email-sender/common/src/emails/: address.rs  mod.rs  receiver.rs  sender.rs
email-sender/common/src/prelude/: macros.rs  mod.rs
email-sender/common/src/template/: mod.rs
email-sender/data_parser/: Cargo.toml
email-sender/data_parser/src/: google_sheets.rs  lib.rs
email-sender/google_oauth/: Cargo.toml
email-sender/google_oauth/src/: lib.rs
email-sender/views/layouts/: main_layout.hbs
email-sender/views/partials/: footer.hbs  header.hbs  styles.hbs
email-sender/views/templates/: email.hbs
flask-restful-api/: .gitignore  README.md  pyproject.toml
flask-restful-api/ecommerce/: app.py
inventory_management_system/: README.md
inventory_management_system/database/schema/: schema.dbml
inventory_management_system/resources/views/Admin/: add_customer.blade.php  add_invoice.blade.php  edit_customer.blade.php  new_order.blade.php
inventory_management_system/routes/: api.php  auth.php
multithreaded-web-server/: README.md
multithreaded-web-server/src/: lib.rs
multithreaded-web-server/src/ops/: args.rs
rest-apis/flask/: README.md  requirements.txt
rest-apis/flask/tests/: test_app.py
rest-apis/rocket/src/: model.rs
rest-apis/rocket/src/api/handler/: get.rs  healthcheck.rs  patch.rs
rest-apis/rocket/src/views/handler/: index.rs  mod.rs
rocket-restful-api/: Cargo.toml  README.md
rocket-restful-api/src/: lib.rs  main.rs
rocket-restful-api/src/api/: mod.rs
rocket-restful-api/src/api/handler/: delete.rs  mod.rs  post.rs
rocket-restful-api/src/views/: mod.rs
rocket-restful-api/tests/: test_main.rs
rust-tcp/: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.Docker.md  README.md  compose.yaml
rust-tcp/src/: main.rs
rust_os/: Cargo.toml  Makefile  README.md
rust_os/src/: main.rs  vga_buffer.rs
rust_os/src/vga_buffer/: color.rs  mod.rs
rustos/: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.yaml
rustos/.cargo/: config.toml  x86_64-rustos.json
rustos/src/: main.rs
spotify-stories/: .env  LICENSE  README.md  diesel.toml  docker-compose.yaml  example.env
spotify-stories/cli/: Cargo.toml
spotify-stories/cli/migrations/2023-01-20-190952_songs/: up.sql
spotify-stories/cli/src/: main.rs
spotify-stories/cli/src/ops/: args.rs
spotify-stories/cli/src/sql/: models.rs
systems/rust_os/: .editorconfig  Cargo.toml  Makefile
systems/rust_os/.cargo/: config.toml
systems/rust_os/src/: lib.rs  macros.rs  main.rs  qemu.rs  serial.rs  test.rs
systems/rust_os/src/base/: test.rs
systems/rust_os/src/libs/: serial.rs
systems/rust_os/src/vga_buffer/: mod.rs  writer.rs
systems/rust_os/tests/: basic_boot.rs  should_panic.rs
systems/rust_os_v2/: Cargo.toml  LICENSE
systems/rust_os_v2/.cargo/: config.toml  x86_64-rust_os.json
systems/rust_os_v2/src/: lib.rs  main.rs
systems/rust_os_v2/src/base/: gdt.rs  interrupts.rs  memory.rs  mod.rs  test.rs
systems/rust_os_v2/src/base/interrupts/: idt.rs  mod.rs
systems/rust_os_v2/src/internals/: allocator.rs  memory.rs  mod.rs  test.rs
systems/rust_os_v2/src/internals/interrupts/: idt.rs  pic.rs
systems/rust_os_v2/src/internals/task/: executor.rs  keyboard.rs  mod.rs
systems/rust_os_v2/src/libs/: mod.rs  serial.rs
systems/rust_os_v2/src/vga_buffer/: mod.rs  writer.rs
systems/rust_os_v2/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
web-scraper/: LICENSE  README.md  pyproject.toml  requirements.txt
web-scraper/web_scraper/: connection.py  format_print.py  main.py
web/ims/: .gitignore  Cargo.toml  index.html
web/ims/migrations/: 20240527201341_tables.sql  db.sqlite
web/ims/src/: app.rs
web/inventory_management_system/: .env.example  README.md  composer.json  package.json  phpunit.xml
web/inventory_management_system/app/Http/Controllers/Auth/: NewPasswordController.php
web/inventory_management_system/database/schema/: schema.sql
web/inventory_management_system/resources/views/Admin/: all_invoices.blade.php  new_invoice.blade.php
web/inventory_management_system/routes/: web.php
web/learning-axum/: .env_example  Cargo.toml  Dockerfile  README.md  compose.yaml
web/learning-axum/src/: lib.rs  main.rs
web/learning-axum/src/router/: mod.rs
web/multithreaded-web-server/: Cargo.toml
web/multithreaded-web-server/public/: index.html
web/multithreaded-web-server/src/: main.rs
web/multithreaded-web-server/src/ops/: connection.rs  mod.rs
web/web-scraper/: README.md
web/web-scraper/tests/: test_function.py
web/yew/: Cargo.toml  README.md  index.html
web/yew/src/: app.rs
