[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Arthur Martelli <arthur.martellig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
autopep8 = "^2.0.2"
flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks.dev]
cmd = "flask --app ecommerce.app run --debug"
help = "Runs the flask app in debug mode"

[tool.poe.tasks.test]
cmd = "poetry run pytest"
help = "Runs PyTest"

[tool.poe.tasks.build]
cmd = "poetry build"
help = "Builds the project"
