[package]
name = "rocket_restful_api"
version = "0.1.0"
authors = ["Arthur Campbell <arthur.martellig@gmail.com>"]
edition = "2021"
description = "Simple CRUD API built with rocket"
readme = "./README.md"
repository = "https://github.com/arthurmartelli/rocket-restful-api"
license = "MIT"
keywords = ["API", "CRUD", "Rocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
uuid = { version = "1.3.1", features = ["v4"] }
