[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

authors = ["Arthur Campbell <arthur.martellig@gmail.com>"]
description = "Experimenting on creating a basic OS"
readme = "./README.md"

license-file = "./LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ! CARGO RUN SECTION
# ? The runner script to make cargo run does not work on windows
# ? Implementation on the Makefile

# [target.'cfg(target_os = "none")']
# runner = "bootimage runner"
# [package.metadata.bootimage]
# build-command = ["build"]
# run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]

# ! PANIC HANDLING SECTION
[profile.dev] # `cargo build` profile
panic = "abort" # disable stack unwinding on panic

[profile.release] # `cargo build --release` profile
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
