[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

authors = ["Arthur Campbell <arthur.martellig@gmail.com>"]
description = "Experimenting on creating a basic OS"
readme = "./README.md"

license-file = "./LICENSE"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# `cargo build` profile
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# `cargo build --release` profile
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
