[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = "Simple python web scrapper that retrieves information from the internet"
authors = ["Arthur Martelli <arthur.martellig@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/arthurmartelli/web_scraper"
packages = [{ include = "web_scraper" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
tabulate = "^0.9.0"
termcolor = "^2.2.0"
beautifulsoup4 = "^4.12.0"
black = "^23.3.0"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "web_scraper.main:main"
