[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
common = { path = "../common" }
data_parser = { path = "../data_parser" }
dotenv = "0.15.0"
google_oauth = { path = "../google_oauth" }
