[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-sheets4 = "4.0.1"
handlebars = "4.3.6"
hyper = "0.14.24"
hyper-rustls = "0.23.2"
lettre = { version = "0.10.2", default-features = false, features = [
    "smtp-transport",
    "tokio1-rustls-tls",
    "hostname",
    "builder",
] }
tokio = { version = "1.25.0", features = ["full"] }
yup-oauth2 = "8.1.0"
