[package]
name = "spotify_stories"
authors = ["Arthur Campbell <arthur.martellig@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Database CLI to manage the Spotify Stories project."

[dependencies]
chrono = "^0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
dialoguer = "0.10.3"
diesel = { version = "2.0.2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
rand = "0.8.5"
