[package]
name = "learning-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
tokio = { version = "1.38.0", features = ["net", "rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
