[package]
name = "web_server"
authors = ["Arthur Campbell <arthur.martellig@gmail.com>"]
description = "Small multithreaded web server"
keywords = ["multithreading", "server", "networking"]
repository = "https://github.com/ArthurMartelli/multithreaded_web_server"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
